MODSOURCE-803: revert changes